[package]
name = "dispo"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ynuwenhof/dispo"
repository = "https://github.com/ynuwenhof/dispo"
license = "MIT OR Apache-2.0"

[dependencies]
bitvec = "1.0.1"
email_address = "0.2.4"
fnv = "1.0.7"
twox-hash = "1.6.3"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
bitvec = "1.0.1"
fnv = "1.0.7"
twox-hash = "1.6.3"
